<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="com.example.rentmyproperty.viewmodel.PropertiesListViewModel"/>
        <variable
            name="viewModel"
            type="com.example.rentmyproperty.viewmodel.PropertiesListViewModel" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <EditText
                android:id="@+id/search_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="Search" />

            <Spinner
                android:id="@+id/property_type_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/property_types"
                android:prompt="@string/property_type_prompt" />

            <EditText
                android:id="@+id/min_price_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="Min price" />

            <EditText
                android:id="@+id/max_price_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="Max price" />

            <Button
                android:id="@+id/filter_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Filter" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/properties_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:clipToPadding="false"
            android:paddingBottom="16dp" />

    </LinearLayout>
</layout>
