...
            android:layout_marginTop="4dp"
            android:text="@string/owners"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btncamera"
            android:layout_width="wrap_content"
            android:layout_marginStart="220dp"
            android:layout_marginTop="4dp"
            android:layout_height="wrap_content"
            android:text="Camera" />

...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">


        <Button
            android:id="@+id/btnPropertiesListView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:text="Properties list" />

...
